<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Couleur">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">


    <TextView   android:id="@+id/zone_couleur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
     </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ToggleButton
            android:id="@+id/bouton1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:width="300px"
            android:textColor="#000000"
            android:textOn="@string/Pas_Rouge"
            android:textOff="@string/Rouge"/>

        <ToggleButton
            android:id="@+id/bouton2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:width="300px"
            android:textColor="#000000"
            android:textOn="@string/Pas_Vert"
            android:textOff="@string/Vert"/>
        <ToggleButton
            android:id="@+id/bouton3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:width="300px"
            android:textColor="#000000"
            android:textOn="@string/Pas_Bleu"
            android:textOff="@string/Bleu"/>
    </LinearLayout>


</RelativeLayout>
